--- a/italiano.html
+++ b/italiano.html
@@ -43,7 +43,7 @@ footer a {
         <a href="/italiano"><div class="button_name">Pedro Girardi</div></a>
     </div>
     <div class="margin_header">
-        <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
+        <a class="one" href="/business-consulting-it"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
         <a class="one" href="/cv-it"><div class="sections_header"> CV </div></a>
         <a class="one" href="/index"><div class="sections_header"> English </div></a>
