--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
 
             <p class="main_text">
 
-I have an international background, which helps me to quickly adapt to new circumstances and work styles. I grew up in Brazil and went to college in the US and have worked in the US, Italy, Germany, and Brazil. You can get more detailed info in my CV. I am currently offering two types of services. 
-                <br> <br>
 
-                <b>Business consulting:</b>
 
-With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. I have worked with companies of all sizes and across many industries. 
-                <br> <br>
+With a degree in Statistics and five years of experience in corporate strategy roles, I can both solve complicated data problems and provide practical recommendations to your business. Here are some of the things that I can do: 
 
-                <b>Quantitative coaching:</b> I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
-                <br> <br>
+</p>
+                    
+                <p class="main_text2">
+                    <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
+                    <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
+                    <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
+                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li> <br></p>
+
+<br> <br>
+
+             
 
                    If you would like to connect, shoot me an email at contact@girardi.io. <br> <br><br> <br>
             </p>
