--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@ With a degree in Statistics and five years of experience in corporate strategy r
 </p>
                     
                 <p class="main_text2">
-                    <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
-                    <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
-                    <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
-                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li> <br></p>
+                    <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
+                    <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
+                    <li><b>Analysis of competitor landscape:</b> Are your price and offerings in line with your competitors?</li><br></p>
 
 <br> <br>
 
