--- a/index.html
+++ b/index.html
@@ -64,12 +64,38 @@ With a degree in Statistics and five years of experience in corporate strategy r
                     <li><b>Analysis of competitor landscape:</b> Are your price and offerings in line with your competitors?</li><br></p>
 
 <br> <br>
+  
+<p class="main_text">
+                    <b>I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
+                    <br> <br>
+                    <b>These have been some of my favorite projects:<br><br></b></font> </p>
+                    
+                <p class="main_text2"><b>Profitability per product line estimation </b>
+                    <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
+                    <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
+                    <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
+                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li> <br></p>
 
-             
+                <p class="main_text2"><b>Implementation of AdTech Product</b>
+                    <li><b>Where:</b> Delivery Hero (Germany), working directly with LATAM, APAC, and MENA regional teams </li>
+                    <li><b>Problem:</b> A new AdTech product was the biggest bet of the year, but did not generate any growth.</li>
+                    <li><b>Solution:</b> I project managed an investigation led by the VP of Global Sales and Revenue. I partnered with local analytics teams to test our product and identify technical issues and sales gaps. After critical technical changes and improved sales guidance, the product grew from €3MM to €10MM within 12 months.</li>
+                    <li><b>Skills:</b> Excel, BigQuery, project management </li><br></p>
 
-                   If you would like to connect, shoot me an email at contact@girardi.io. <br> <br><br> <br>
-            </p>
-        </div>
+                <p class="main_text2"><b>Go-to-market strategy</b>
+                    <li><b>Where:</b> BCG US, Fortune 500 client</li>
+                    <li><b>Problem:</b> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization)</li>
+                    <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
+                    <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li><br></p>
+<!-- 
+                <p class="main_text2"><b>Here are what some of my previous colleagues have to say:</b></font>
+                <li> <q>Pedro is a great thrower but a bit too short to play in the league</q>, <i>Michael Jordan, colleague at the LA Lakers</i></li> 
+                <li> <q>Pedro is a great thrower but a bit too short to play in the league</q>, <i>Michael Jordan, colleague at the LA Lakers</i></li>
+                </p>
+-->                
+                <br><br><br>
+            </div>
+
 
         <div class="image-container">
             <img src="profile.jpg" alt="Profile">
