--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
    padding: 0px;
 }
     .main_text-container li {
-        text-indent: 10px; /* Adjust the value as needed */
+        text-indent: 1em; /* Adjust the value as needed */
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+        
+    .main_text2 li {
+        text-indent: 1em; /* Adjust the value as needed */
         padding-left: 10%;
         padding-right: 10%;
     }
@@ -79,6 +85,7 @@
     </div>
     <div class="margin_header">
         <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/index"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring </div></a>
         <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
     </div>
