--- a/index2.html
+++ b/index2.html
@@ -73,16 +73,13 @@
     <main>
 
             <div class="main_text-container">
-                <p class="ex1">
-                <font size="+16">Hi,</font> my name is Pedro and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently I am working as an independent consultant. </p>
-
                     
-                <p class="main_text2">With a degree in Statistics and five years of experience in corporate strategy roles, I can both solve complicated data problems and provide practical recommendations to your business. Here are some of the things that I can do:
+                <p class="main_text2"><font size="+8"><b>Hi, my name is Pedro and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. I am currently an independent consultant. With a degree in Statistics and five years of experience in corporate strategy roles, I can both solve complicated data problems and provide practical recommendations to your business. Here are some of the things that I can do:</font></b>
                     <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
                     <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
                     <li><b>Analysis of competitor landscape:</b> Are your price and offerings in line with your competitors?</li></p>
 				
-                <p class="main_text2"><b>These are some of my favorite past projects: <Br><Br> 
+                <p class="main_text2"><b><font size="+8">These are some of my favorite past projects: </font><Br><Br> 
                     Profitability per product line estimation </b>
 					<li><b>Where:</b> Freelancing, Italian-American tourism company</li>
 					<li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
