--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@
 
                 .main_text2 {
     /* Your existing styles for .main_text */
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
     padding-top: 0%;
     margin-bottom: 0px; /* Adjust the value as needed for spacing */
     font-size: 16px;
@@ -73,13 +73,14 @@
     <main>
 
             <div class="main_text-container">
-                    
-                <p class="main_text2"><font size="+1"><b>Hi, my name is Pedro and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. I am currently an independent consultant. With a degree in Statistics and five years of experience in corporate strategy roles, I can both solve complicated data problems and provide practical recommendations to your business. Here are some of the things that I can do:</font></b>
+                    <br>
+                <p class="main_text2"><font size="+1"><b>Hi, my name is Pedro</font></b> and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. I am currently an independent consultant. With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. 
+		    <br><br> <font size="+1"><b>Here are some of the things that I can do:</b></font>
                     <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
                     <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
                     <li><b>Analysis of competitor landscape:</b> Are your price and offerings in line with your competitors?</li></p>
 				
-                <p class="main_text2"><b><font size="+1">These are some of my favorite past projects: </font><Br><Br> 
+                <p class="main_text2"><b><font size="+1"><br>These are some of my favorite past projects: </font><Br><Br> 
                     Profitability per product line estimation </b>
 					<li><b>Where:</b> Freelancing, Italian-American tourism company</li>
 					<li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
