--- a/index2.html
+++ b/index2.html
@@ -48,8 +48,8 @@
 }
     .main_text-container li {
         text-indent: 10px; /* Adjust the value as needed */
-        padding-left: 10%;
-        padding-right: 10%;
+        padding-left: 17%;
+        padding-right: 17%;
     }
     </style>
 </head>
@@ -74,7 +74,7 @@
 
             <div class="main_text-container">
                     <br>
-                <p class="main_text2"><font size="+1"><b>Hi, my name is Pedro</font></b> and I am a business consultant with five years of experience in strategy roles at the likes of BCG US and Red Bull Germany. I am currently an independent consultant. With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. 
+                <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro</font></b> and I am a freelancer< business consultant with five years of experience at the likes of BCG US and Red Bull Germany. With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. 
 		    <br><br> <font size="+1"><b>Here are some of the things that I can do:</b></font>
                     <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
                     <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
@@ -110,7 +110,7 @@
         <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
             <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
         </a>
-        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp contact@girardi.io
+        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp P.IVA 01586900522
     </footer>
 
 </body>
