--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
 
             <div class="main_text-container">
                     <br>
-                <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro</font></b> and I am a freelancer< business consultant with five years of experience at the likes of BCG US and Red Bull Germany. With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. 
+                <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
 		    <br><br> <font size="+1"><b>Here are some of the things that I can do:</b></font>
                     <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
                     <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
@@ -98,9 +98,9 @@
                     <li><b>Problem:</b> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization)</li>
                     <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
                     <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li><br></p>
-<!-- 
-
--->                
+ 
+		<br><br><br>	
+            	If you would like to connect, shoot me an email at contact@girardi.io.   
                 <br><br><br>
             </div>
 
