--- a/index2.html
+++ b/index2.html
@@ -51,6 +51,11 @@
         padding-left: 17%;
         padding-right: 17%;
     }
+
+	    .image-container img {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 
@@ -71,7 +76,9 @@
     </header>
 
     <main>
-
+	<div class="image-container">
+            <img src="profile.jpg" alt="Profile">
+        </div>
             <div class="main_text-container">
                     <br>
                 <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
