--- a/index2.html
+++ b/index2.html
@@ -53,8 +53,10 @@
     }
 
 	    .image-container img {
-            width: 100%;
-            height: auto;
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 75%;
         }
     </style>
 </head>
