--- a/index2.html
+++ b/index2.html
@@ -52,12 +52,17 @@
         padding-right: 17%;
     }
 
-	    .image-container img {
-	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
-	  width: 75%;
-        }
+	   .image-container {
+  width: 50%;  /* Or any desired width */
+  margin: 0 auto;  /* Optional: center the container horizontally */
+}
+
+.image-container img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
     </style>
 </head>
 
