--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         }
 
         .main_text-container {
-    margin-top: 0;
-    margin-bottom: 0;
+  padding: 1rem; /* Add some padding for better look */
 }
 
 .p {
@@ -53,8 +52,9 @@
     }
 
 	   .image-container {
-  width: 50%;  /* Or any desired width */
-  margin: 0 auto;  /* Optional: center the container horizontally */
+  float: right;
+  width: 30%; /* Adjust width as needed for the image */
+  margin: 1rem 0 1rem 1rem; /* Add margins for spacing */
 }
 
 .image-container img {
