--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="myStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Business Consulting - Pedro Girardi - </title>
+    <title>Pedro Girardi</title>
     <style>
       .main_text {
             font-size: 16px; /* Adjust font size */
@@ -85,17 +85,25 @@
     </header>
 
     <main>
-	<div class="image-container">
-            <img src="profile.jpg" alt="Profile">
-        </div>
+	<div class="content-container">
+	    
             <div class="main_text-container">
                     <br>
                 <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
-		    <br><br> <font size="+1"><b>Here are some of the things that I can do:</b></font>
+		        </div> 
+
+		    <div class="image-container">
+            <img src="profile.jpg" alt="Profile">
+        </div> </div> 
+
+		    
+		    <div class="main_text-container">
+                    <br>
+                <p class="main_text2"><br><br> <font size="+1"><b>Here are some of the things that I can do:</b></font>
                     <li><b>Profitability analysis:</b>  What parts of your portfolio are pulling you back instead of propelling you forward? What portfolio innovations can help you increase profitability? </li>
                     <li><b>Customer profiling and journey:</b>  Do you know your key client personas and how their engagement evolved over time? Are you aware of their biggest pain points throughout their customer journeys?/li>
                     <li><b>Analysis of competitor landscape:</b> Are your price and offerings in line with your competitors?</li></p>
-	    </div>
+	
 
 		<div class="main_text-container">    
                 <p class="main_text2"><b><font size="+1"><br>These are some of my favorite past projects: </font><Br><Br> 
