--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
 .content-wrapper {
   display: flex;
 }
+
+	     .ex1 {
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 5%;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: justify;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 0; /* Add this to reduce the bottom margin */
+}
 	    
     </style>
 </head>
@@ -89,7 +100,7 @@
 	    
             <div class="main_text-container">
                     <br>
-                <p class="main_text2"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
+                <p class="ex1"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
 		        </div> 
 
 		    <div class="image-container">
