--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         }
 
         .main_text-container {
-  flex: 1; /* Allows the element to grow to fill remaining space*/
+      padding-left: 15%;
+    padding-right: 15%;
 }
 
 .p {
@@ -59,7 +60,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 60%;
 }
 .content-wrapper {
   display: flex;
@@ -69,7 +70,7 @@
     padding-left: 25%;
     padding-right: 5%;
     padding-top: 5%;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
     text-align: justify;
     font-family: 'Open Sans', sans-serif;
