--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         }
 
         .main_text-container {
-      padding-left: 15%;
-    padding-right: 15%;
+  flex: 1; /* Allows the element to grow to fill remaining space*/
 }
 
 .p {
@@ -60,7 +59,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 75%;
 }
 .content-wrapper {
   display: flex;
@@ -70,7 +69,7 @@
     padding-left: 25%;
     padding-right: 5%;
     padding-top: 5%;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
     text-align: justify;
     font-family: 'Open Sans', sans-serif;
