--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 .image-container img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0;
+  margin-right: 0;
   width: 60%;
 }
 .content-wrapper {
@@ -66,7 +66,7 @@
 }
 
 	     .ex1 {
-    padding-left: 25%;
+    padding-left: 45%;
     padding-right: 5%;
     padding-top: 5%;
     font-size: 18px;
