--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
                     <li><b>Where:</b> BCG US, Fortune 500 client</li>
                     <li><b>Problem:</b> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization)</li>
                     <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
-                    <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li><br>
- 
-		<br><br><br>	
-            	If you would like to connect, shoot me an email at contact@girardi.io.   </p>
+                    <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li><br></p>
+ 		
+            	<p class="main_text2"><br>If you would like to connect, shoot me an email at contact@girardi.io.   </p>
                 <br><br><br>
             </div>
 
