--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	    
             <div class="main_text-container">
                     <br><br>
-                <p class="ex1"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. 
+                <p class="ex1"><font size="+2"><b>Hi, my name is Pedro </font></b>and I am a freelancer business consultant with a focus on quantitative analyses. With a degree in Statistics and five years of experience in corporate strategy roles at the likes of BCG US and Red Bull, I can solve complicated data problems and provide practical recommendations to your business. My guiding principles are to focus on what matters, be an honest thought partner, and act as if I were a co-owner of the business. 
 		        </div> 
 
 		    <div class="image-container">
