--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -25,7 +25,7 @@
         <a href="/index"><div class="button_name">Pedro Girardi</div></a>
     </div>
     <div class="margin_header">
-        <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
+        <a class="one" href="/index"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
         <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
         <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
