--- a/cv.html
+++ b/cv.html
@@ -1,28 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Pedro Girardi - Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pedro Girardi | CV</title>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: 'Merriweather', serif;
+      margin: 0;
+      padding: 0;
+      background-color: #FDF7F1;
+      color: #333;
+    }
+
+    .cv-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px; /* Reduced padding */
+    }
+
+    iframe {
+      width: 70%;
+      height: 90vh;
+      border: none;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+
+    header {
+      background-color: #FFFFFF;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    header .logo {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    footer {
+      background-color: #333;
+      color: #FFFFFF;
+      text-align: center;
+      padding: 10px 0; /* Reduced padding */
+      margin-top: 20px; /* Reduced margin */
+    }
+
+    footer .contact-info {
+      margin-bottom: 10px;
+    }
+
+    footer .contact-info p {
+      margin: 5px 0;
+    }
+
+    footer nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    footer nav ul li a {
+      color: #FFFFFF;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+
+    footer .social-icons {
+      margin-top: 10px;
+    }
+
+    footer .social-icons a {
+      color: #FFFFFF;
+      font-size: 0.9rem;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+    }
+
+    footer .social-icons img {
+      width: 20px;
+      height: 20px;
+      margin-right: 5px;
+    }
+  </style>
 </head>
 <body>
-
-<header>
-    <div class="mod_br"></div>
-    <div class="name_header">
-        <a href="/index"><div class="button_name">Pedro Girardi</div></a>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <h1 class="logo"><a href="landingPage.html" style="text-decoration: none; color: inherit;">PEDRO GIRARDI</a></h1>
     </div>
-    <div class="margin_header">
-        <a class="one" href="/index"><div class="sections_header"> Business Consulting </div></a>
-        <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
-        <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
-        <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
-    </div>
-    <div class="mod_br_small"></div>
-</header>
-    
-<iframe src="https://drive.google.com/file/d/1sgrb7AgMlfhU4QK2c5puIecxIoU0D7Yr/preview" width="100%" height="1200px" frameborder="0"></iframe>
+  </header>
 
+  <!-- CV Section -->
+  <div class="cv-container">
+    <iframe src="https://drive.google.com/file/d/1lRTWUaV97TokA2zHYIDpMyvTwLjgqHVh/preview" allow="fullscreen"></iframe>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="contact-info">
+        <p>contact@girardi.io</p>
+        <p>P.IVA 01586900522</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </nav>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
+          <img src="linkedinLogo.webp" alt="LinkedIn">
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
