new website jan 2025

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <h3>Hi, I am Pedro, a freelancer strategy consultant with a focus on portfolio optimization.</h3>
           <p>Hi, I am Pedro, a freelancer strategy consultant with a focus on portfolio optimization.</p>
           <div class="cta-buttons">
-            <a href="#cv" class="btn-download-cv">Download CV</a>
-            <a href="#contact" class="btn-get-in-touch">Get in Touch</a>
+            <a href="cv.html" class="btn-download-cv">Download CV</a>
+            <a href="chat.html" class="btn-get-in-touch">Get in Touch</a>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
             <img src="phone.png" alt="Icon">
           </div>
           <div class="project-content">
-            <h3>Portfolio diagnostic for major German tech client</h3>
+            <h3>Portfolio diagnostic for major German tech company</h3>
             <p><strong>Problem:</strong> My client was a leading German tech company with several brands undergoing a 2030 strategy overview. It lacked a comprehensive overview of its portfolio to inform long-term investments.</p>
             <p><strong>Solution:</strong> I reated a unified view of demographic, engagement, and monetization data across all brands, identifying the strenghts and weaknesses of each brand and providing strategical recommendations. </p>
             <p><strong>Outcomes:</strong> My client used insights to inform investment/divestment decisions and refine their 2030 strategy roadmap. </p>
@@ -117,7 +117,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="privacyPolicy.html">Privacy Policy</a></li>
         </ul>
       </nav>
       <div class="social-icons">
