--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo"><a href="landingPage.html" style="text-decoration: none; color: inherit;">PEDRO GIRARDI</a></h1>
+      <h1 class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">PEDRO GIRARDI</a></h1>
     </div>
   </header>
 
