--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -103,7 +103,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo"><a href="landingPage.html">PEDRO GIRARDI</a></h1>
+      <h1 class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">PEDRO GIRARDI</a></h1>
     </div>
   </header>
 
