--- a/cv.html
+++ b/cv.html
@@ -112,8 +112,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#">Terms and Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="privacyPolicy.html">Privacy Policy</a></li>
         </ul>
       </nav>
       <div class="social-icons">
