--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="hero-content">
         <img src="your-photo.jpg" alt="Pedro Girardi" class="profile-photo">
         <div class="intro">
-          <h3>Hi, I am Pedro, a freelancer strategy consultant with a focus on portfolio optimization.</h3>
-          <p>Hi, I am Pedro, a freelancer strategy consultant with a focus on portfolio optimization.</p>
+          <h3>Hi, I'm Pedro, an ex-BCG US consultant currently working as a freelancer. </h3>
+          <p>I have worked in portfolio optimization projects for companies that range anywhere from $60B to 15-person family businesses. My strengths lie in my data skills (I hold a degree in Statistics) and the ability to connect with clients from the C-Level to Jr. Analysts.</p>
           <div class="cta-buttons">
             <a href="cv.html" class="btn-download-cv">Download CV</a>
             <a href="chat.html" class="btn-get-in-touch">Get in Touch</a>
@@ -63,7 +63,7 @@
 
 <!-- Past Projects Section -->
   <section id="projects" class="projects">
-    <div class="container" style="padding-top: 50px;">
+    <div class="container" style="padding-top: 0px;">
       <h2>Examples of past projects</h2>
       <div class="project-list">
         <div class="project">
