--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -147,8 +147,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="terms.html">Terms and Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="privacyPolicy.html">Privacy Policy</a></li>
         </ul>
       </nav>
       <div class="social-icons">
